fixed overflowing elements

--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1,10 +1,10 @@
 @import url(base.css);
-/* div {
+div {
     border: 1px solid rgba(255, 0, 0, 1)
-} */
+}
 
 html {
-    scroll-behavior: smooth;
+    /* scroll-behavior: smooth; */
 }
 /* Landing */
 
@@ -51,8 +51,8 @@ a {
 }
 
 .card-why {
-    width: 18.5rem;
-    height: 26rem;
+    width: 20rem;
+    height: 27rem;
 }
 
 /* Our courses */
@@ -233,3 +233,207 @@ a {
     background: #0054A5 !important;
     transition: all 1s ease-in-out;
 }
+
+
+@media all and (max-width: 1279px) {
+    #navbar {
+        padding: 0 3rem;
+        width: 90%;
+    }
+
+    /* Fun fact */
+    .ff .pr-12,
+    .ff .pr-24 {
+        padding: 0rem;
+    }
+
+    .ff .ml-16 {
+        margin: 0rem;
+    }
+
+    .about,
+    .ff,
+    .why,
+    .oc,
+    .oe,
+    .what,
+    .faq,
+    .sponsor {
+        padding: 0rem 3rem;
+    }
+  }
+
+  @media all and (max-width: 1023px) {
+    .font-extrabold {
+        font-size: 3rem;
+    }
+
+    #navbar {
+        display: none;
+    }
+
+    /* Our Courses */
+    .oc {
+        padding: 0rem 3rem;
+    }
+
+    .oc .btnCont .ocBox {
+        padding: 0.5rem;
+    }
+
+      /* Footer */
+    .footer-content {
+        top: 10rem;
+    }
+    .footer-sec .got-question{
+        width: 25rem;
+    }
+
+    .footer .socmed-cont {
+        width: 12rem;
+    }
+
+    .footer .socmed-cont .text-2xl {
+        width: 100px;
+    }
+
+
+  }
+
+  @media all and (max-width: 767px) {
+    .font-extrabold {
+        font-size: 2.2rem;
+    }
+
+    .about,
+    .ff,
+    .why,
+    .oc,
+    .oe,
+    .what,
+    .faq,
+    .sponsor {
+        padding: 0rem 0rem;
+    }
+
+    .ocBigBox {
+        padding: 3rem 0rem;
+    }
+
+    .ocBigBox .ocCon .bg-cBabyBlue {
+        margin: 0rem 0.2rem;
+    }
+
+
+    /* Footer */
+    .footer-sec .got-question{
+        width: 10rem;
+    }
+
+    .footer .socmed-cont {
+        padding: 0.5rem;
+    }
+
+    .footer .gotaq-cont {
+        padding: 0.5rem;
+        width: 4rem;
+    }
+  }
+
+  @media all and (max-width: 479px) {
+    /* why */
+    .card-why {
+        width: 15rem;
+        height: 20rem;
+        margin: 0.8rem 0rem;
+        padding: 2rem 0rem;
+    }
+
+    /* oc */
+    .oc .ocBigBox {
+        min-height: 27rem;
+    }
+    .oc .ocCon {
+        padding: 1rem 0rem;
+    }
+
+    .oc .ocCon .text-3xl {
+        text-align: center;
+        font-size: 1.2rem;
+    }
+
+    .oc .ocCon .px-16{
+        padding: 0rem 0.5rem;
+        font-size: 0.9rem;
+    }
+
+    .oc .ocBigBox .w-36 {
+        width: max-content;
+        font-size: 0.8rem;
+        margin: 0rem 0.2rem;
+        padding: 0.2rem 0.4rem;
+    }
+
+    .oc .btnCont {
+        min-height: 4rem;
+    }
+
+    .oc .btnCont .ocBox {
+        padding: 0.5rem;
+    }
+
+    .oc .btnCont .ocBox .ocBtn{
+        width: 40px;
+    }
+
+    .oc .oc-text {
+        padding: 1rem;
+        font-size: 0.8rem;
+    }
+
+
+    /* ff */
+    .ff .boxCont .font-regular  {
+        font-size: 0.8rem;
+    }
+    .ff .shadow-bsFf {
+        padding: 0.5rem;
+        margin: 0rem 0.2rem 0rem 0rem;
+        width: 4rem;
+    }
+
+    .ff-img {
+        width: 4rem;
+    }
+
+    /* Say */
+    .say-card img{
+        width: 80px;
+        height: 80px;
+    }
+    .say-card .text-sm{
+        font-size: .7rem;
+        line-height: .9rem;
+    }
+    .say-btn{
+        font-size: .6rem;
+        font-weight: 600;
+    }
+    .say-btn img{
+        width: 30px;
+        height: 30px;
+    }
+    .say-card-cont{
+        height: 130px;
+    }
+    .say-card-cont .title{
+        font-size: .8rem;
+    }
+    .say-title{
+        /* font-size: 1.2rem; */
+    }
+    .text-base{
+        font-size: .8rem;
+        line-height: 1.2rem;
+    }
+  }
